# backend/routes/usersRoutes/users.routes.js
@@ -2,40 +2,42 @@ const express = require('express');
 const router = express.Router();
 const { getAllUsers, getUserById, getProfile, updateProfile, updateProfileImage, deleteProfileImage } = require('../../controllers/usersControllers/userController');
 const isBothAuthenticated = require('../../middleware/authMiddleware/bothAuthenticated');
-const isUserAuthenticated = require('../../middleware/authMiddleware/userAuthenticated');
+const isUserAuthenticated = require('../../middleware/authMiddleware/userAuthenticate');
 const { upload } = require('../../services/multer/multerConfig');
 
+
 router.get(
-    '/users', 
+    '/users', // #swagger.tags=['Users']
     getAllUsers
 );
+
 router.get(
-    '/users/:id', 
+    '/users/:id', // #swagger.tags=['Users']
     isBothAuthenticated,
      getUserById
     );
 
 router.get(
-    '/users/profile', 
+    '/user/profile/', // #swagger.tags=['Users']
     isUserAuthenticated, 
     getProfile
 );
 
 router.put(
-    '/users/profile', 
+    '/user/profile/',  // #swagger.tags=['Users']
     isUserAuthenticated, 
     updateProfile
 );
 
 router.put(
-    '/users/profile/image', 
+    '/users/profile/image', // #swagger.tags=['Users']
     isUserAuthenticated, 
-    upload.single('profileImage'), 
+    upload.single('image'),
     updateProfileImage
 );
 
 router.delete(
-    '/users/profile/image', 
+    '/users/profile/image', // #swagger.tags=['Users']
     isUserAuthenticated, 
     deleteProfileImage
 );
